// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render 1`] = `
<div>
  <div
    class="sc-AxjAm dzFRmV"
    color="primary"
  />
</div>
`;

exports[`Label should render a large one 1`] = `
<div>
  <div
    class="sc-AxjAm cHJVLs"
    color="primary"
  />
</div>
`;

exports[`Label should render a small one 1`] = `
<div>
  <div
    class="sc-AxjAm hhznFZ"
    color="primary"
  />
</div>
`;

exports[`Label should render danger color 1`] = `
<div>
  <div
    class="sc-AxjAm emrqVJ"
    color="danger"
  />
</div>
`;

exports[`Label should render neutral color 1`] = `
<div>
  <div
    class="sc-AxjAm etMnaF"
    color="neutral"
  />
</div>
`;

exports[`Label should render primary color 1`] = `
<div>
  <div
    class="sc-AxjAm dzFRmV"
    color="primary"
  />
</div>
`;

exports[`Label should render success color 1`] = `
<div>
  <div
    class="sc-AxjAm caBrlJ"
    color="success"
  />
</div>
`;

exports[`Label should render warning color 1`] = `
<div>
  <div
    class="sc-AxjAm hYdnYx"
    color="warning"
  />
</div>
`;
